--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
-  "name": "wiki-cli",
+  "name": "@brainwav/wsearch-cli",
   "version": "0.1.3",
-  "description": "Query Wikidata via REST, SPARQL, and Action API with safe, script-friendly output.",
+  "description": "brAInwav wSearch CLI - Query Wikidata via REST, SPARQL, and Action API with safe, script-friendly output.",
   "type": "module",
   "bin": {
-    "wiki": "dist/cli.js"
+    "wsearch": "dist/cli.js"
   },
   "exports": {
     ".": "./dist/index.js"
